status-bar background-color

--- a/more.html
+++ b/more.html
@@ -109,6 +109,13 @@
             />
             <span class="more-suggestions__icon-text">Friends Gem</span>
           </div>
+          <div class="more-suggestions__icon empty">
+            <img
+              src="images/friendsgem.jpg"
+              class="more-suggestions__icon-image"
+            />
+            <span class="more-suggestions__icon-text">Friends Gem</span>
+          </div>
         </div>
       </div>
     </main>
